update dispersion+lib submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Pendulum_signal_processing"]
 	path = Pendulum_signal_processing
 	url = https://github.com/donRumata03/Pendulum-signal-processing
+[submodule "BadVoltageSensors/BadVoltageSensors/dispersion_lib"]
+	path = BadVoltageSensors/BadVoltageSensors/dispersion_lib
+	url = https://github.com/sitandr/dispersion_counter
