start adding measurement results

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "BadVoltageSensors/dispersion_lib"]
-	path = BadVoltageSensors/dispersion_lib
-	url = https://github.com/sitandr/dispersion_counter
 [submodule "Pendulum_signal_processing"]
 	path = Pendulum_signal_processing
 	url = https://github.com/donRumata03/Pendulum-signal-processing
 [submodule "BadVoltageSensors/BadVoltageSensors/dispersion_lib"]
 	path = BadVoltageSensors/BadVoltageSensors/dispersion_lib
+	url = https://github.com/sitandr/dispersion_counter
+[submodule "dispersion_lib"]
+	path = dispersion_lib
 	url = https://github.com/sitandr/dispersion_counter
